# cxx-quickstart

./: .gitignore  CMakeLists.txt  README.md  cxx_client.cpp  cxx_client.h  db.cpp  db.h  hotel_search_index.json  main.cpp  operations.cpp  operations.h  runner.cpp  set_env_vars.sh
model/: airline.json  hotel.json
tests/: CMakeLists.txt  test_doc.json  test_index.json  test_index2.json  tests.cpp
